
name:                strato-p2p-server
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable strato-p2p-server
  main-is:             Main.hs
  build-depends:       base,
                       blockapps-util,
                       ethereum-discovery,
                       hflags,
                       monad-logger,
                       strato-p2p-server
  ghc-options:         -Wall -O2 
  hs-source-dirs: exec_src
  default-language: Haskell2010      

executable strato
  main-is:             Strato.hs
  build-depends:       base,
                       blockapps-util,
                       directory,
                       ethereum-discovery,
                       ethereum-vm,
                       hflags,
                       monad-logger,
                       strato-adit,
                       strato-index,
                       strato-p2p-client,
                       strato-p2p-server,
                       strato-quarry,
                       transformers,
                       unix
                       
  ghc-options:         -Wall -O2 
  hs-source-dirs: exec_src
  default-language: Haskell2010      


    
library
  build-depends:       base,
                       base16-bytestring,
                       binary,
                       blockapps-data,
                       blockapps-util,
                       bytestring,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       containers,
                       crypto-pubkey,
                       crypto-pubkey-types,
                       cryptohash,
                       ethereum-discovery,
                       ethereum-encryption,
                       esqueleto,
                       ethereum-rlp,
                       haskoin,
                       hflags,
                       json-rpc-server,
                       lifted-async,
                       lifted-base,
                       monad-logger,
                       monadIO,
                       mtl,
                       network,
                       persistent,
                       persistent-postgresql,                   
                       postgresql-simple,
                       resourcet,
                       stm,
                       stm-conduit,
                       strato-conf,
                       strato-p2p-client,
                       text,
                       time,
                       transformers
 
  exposed-modules:
                   Blockchain.ServOptions
                   Executable.StratoP2PServer
  other-modules:
                   Blockchain.TCPServer
                   Blockchain.CommunicationConduit
                   Blockchain.ContextLite
                   Blockchain.BlockSynchronizerSql
                   Blockchain.P2PUtil
                   Executable.StratoP2PServerComm
  hs-source-dirs:      src
  default-language:    Haskell2010

        
	