name: strato-p2p
version: 0.0.4
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: Apache-2.0
description:
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.4

executable strato-p2p-client
    default-language: Haskell2010
    build-depends:
                   base >= 4 && < 5
                 , blockapps-util
                 , hflags
                 , monad-logger
                 , strato-p2p
    main-is: StratoP2PClientMain.hs
    ghc-options: -Wall -threaded
    buildable: True
    hs-source-dirs: exec_src


executable strato-p2p-server
    default-language: Haskell2010
    build-depends:
                   base >= 4 && < 5
                 , blockapps-util
                 , ethereum-discovery
                 , hflags
                 , monad-logger
                 , strato-p2p
    main-is: StratoP2PServerMain.hs
    ghc-options: -Wall -threaded
    buildable: True
    hs-source-dirs: exec_src

library
    default-language: Haskell2010
    build-depends:
                   base >= 4 && < 5
                 , base16-bytestring
                 , aeson
                 , blockapps-data
                 , blockapps-util
                 , bytestring
                 , conduit
                 , conduit-combinators
                 , conduit-extra
                 , containers
                 , crypto-pubkey
                 , crypto-pubkey-types
                 , crypto-random
                 , dns
                 , esqueleto
                 , ethereum-discovery
                 , ethereum-encryption
                 , ethereum-rlp
                 , blockapps-haskoin
                 , hflags
                 , json-rpc-server
                 , json-rpc-client
                 , lifted-base
                 , merkle-patricia-db
                 , monad-control
                 , monad-logger
                 , monadIO
                 , blockapps-milena
                 , mtl
                 , network
                 , persistent
                 , persistent-postgresql
                 , postgresql-simple
                 , random
                 , resourcet
                 , SafeSemaphore
                 , stm
                 , stm-conduit
                 , strato-conf
                 , text
                 , time
                 , transformers
                 , ansi-wl-pprint
                 , strato-conf
                 , strato-sequencer
                 , strato-model
                 , strato-redis-blockdb
                 , hedis

    exposed-modules:
                   Blockchain.Context
                   Blockchain.Data.Wire
                   Blockchain.Display
                   Blockchain.EventException
                   Blockchain.Event
                   Blockchain.NewEvent
                   Blockchain.ExtMergeSources
                   Blockchain.Options
                   Blockchain.SeqEventNotify
                   Blockchain.DeLoopNotify
                   Blockchain.TCPClientWithTimeout
                   Blockchain.ServOptions
                   Blockchain.P2PRPC
                   Executable.StratoP2PClient
                   Executable.StratoP2PServer
    other-modules:
                   Blockchain.TimerSource
                   Blockchain.TCPServer
                   Blockchain.CommunicationConduit
                   Blockchain.ContextLite
                   Blockchain.BlockSynchronizerSql
                   Blockchain.P2PUtil
    ghc-options: -Wall -O2
    buildable: True
    hs-source-dirs: src


test-suite strato-p2p-client-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options: -Wall -Werror
    main-is: Spec.hs
    other-modules: Event.EventSpec
    build-depends: base >=4 && < 5
      , hspec
      , strato-p2p-client
      , conduit
      , strato-model
      , crypto-pubkey-types
      , mtl
      , containers
      , blockapps-data
