name:                strato-redis-blockdb
version:             0.1.0.0
author:              BlockApps
maintainer:          blockapps
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0
description:         Functions to operate against the Redis-backed BlockDB

library
  exposed-modules:     Blockchain.Strato.RedisBlockDB
  other-modules:       Blockchain.Strato.RedisBlockDB.Models
  build-depends:       base
                     , mtl
                     , ethereum-rlp
                     , bytestring
                     , strato-model
                     , blockapps-data
                     , hedis
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Werror

test-suite strato-redis-blockdb-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Test.hs
    build-depends:
        blockapps-data,
        blockapps-util,
        base,
        bytestring,
        hedis,
        HUnit,
        async,
        hspec,
        HUnit,
        QuickCheck,
        stm,
        text,
        mtl,
        strato-redis-blockdb,
        strato-model,
        test-framework,
        test-framework-hunit,
        time
    -- We use -O0 here, since GHC takes *very* long to compile so many constants
    ghc-options: -O0 -Wall -rtsopts -fno-warn-unused-do-bind
