name:                strato-redis-blockdb
version:             0.1.0.0
author:              BlockApps
maintainer:          blockapps
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0
description:         Functions to operate against the Redis-backed BlockDB

library
  exposed-modules:     Blockchain.Strato.RedisBlockDB
  other-modules:       Blockchain.Strato.RedisBlockDB.Models
  build-depends:       base
                     , mtl
                     , ethereum-rlp
                     , bytestring
                     , strato-model
                     , blockapps-data
                     , hedis
                     , base16-bytestring
                     -- solely for REPL
                     , strato-conf
                     , blockapps-data
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Werror

test-suite strato-redis-blockdb-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Test.hs
    build-depends:
        blockapps-data,
        blockapps-util,
        async,
        base,
        bytestring,
        hedis,
        HUnit,
        hspec-contrib,
        hspec,
        QuickCheck,
        stm,
        ethereum-rlp,
        text,
        mtl,
        strato-redis-blockdb,
        strato-model,
        time
    -- We use -O0 here, since GHC takes *very* long to compile so many constants
    ghc-options: -O0 -Wall -rtsopts -fno-warn-unused-do-bind
    default-language: Haskell2010
