name:                strato-redis-blockdb
version:             0.1.0.0
author:              BlockApps
maintainer:          blockapps
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0
description:         Functions to operate against the Redis-backed BlockDB

library
  exposed-modules:     Blockchain.Strato.RedisBlockDB
  other-modules:       Blockchain.Strato.RedisBlockDB.Models
  build-depends:       base
                     , containers
                     , mtl
                     , ethereum-rlp
                     , bytestring
                     , strato-model
                     , blockapps-data
                     , hedis
                     , base16-bytestring
                     -- solely for REPL
                     , strato-conf
                     , blockapps-data
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Werror

executable strato-redis-viz
  main-is:             Viz.hs
  ghc-options:         -Wall -O2
  other-modules:       Blockchain.Strato.RedisBlockDB.Test.Chain
  hs-source-dirs:      exec_src, test
  build-depends:
        ansi-wl-pprint,
        optparse-applicative,
        blockapps-data,
        blockapps-util,
        base,
        diagrams-contrib,
        diagrams-lib,
        diagrams-html5,
        diagrams-canvas,
        containers,
        bytestring,
        lens-family-th,
        lens-family,
        QuickCheck,
        hedis,
        text,
        strato-redis-blockdb,
        strato-model
  default-language:    Haskell2010
  ghc-options: -threaded -Wall -Werror

test-suite strato-redis-blockdb-style
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: HLint.hs
    other-modules: Blockchain.Strato.RedisBlockDB.Test.Chain
    build-depends:
        hlint,
        ansi-wl-pprint,
        blockapps-data,
        blockapps-util,
        base,
        containers,
        lens-family,
        lens-family-th,
        bytestring,
        hedis,
        HUnit,
        hspec-contrib,
        hspec,
        hspec-core,
        QuickCheck,
        text,
        strato-redis-blockdb,
        strato-model
    -- We use -O0 here, since GHC takes *very* long to compile so many constants
    ghc-options: -O0 -Wall -rtsopts -fno-warn-unused-do-bind
    default-language: Haskell2010
test-suite strato-redis-blockdb-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Test.hs
    other-modules: Blockchain.Strato.RedisBlockDB.Test.Chain
    build-depends:
        ansi-wl-pprint,
        blockapps-data,
        blockapps-util,
        base,
        containers,
        lens-family,
        lens-family-th,
        bytestring,
        hedis,
        HUnit,
        hspec-contrib,
        hspec,
        hspec-core,
        QuickCheck,
        text,
        strato-redis-blockdb,
        strato-model
    -- We use -O0 here, since GHC takes *very* long to compile so many constants
    ghc-options: -O0 -Wall -rtsopts -fno-warn-unused-do-bind
    default-language: Haskell2010
