name:                strato-sequencer
version:             0.1.0.0
--synopsis:            Initial project template from stack
--description:         Please see README.md
--homepage:            https://github.com/githubuser/strato-sequencer#readme
license:             MIT
--license-file:        LICENSE
author:              Ilya Ostrovskiy
maintainer:          ilya@blockapps.net
copyright:           2016 BlockApps Inc
category:            Blockchain
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options: -Wall -O2 -threaded
  hs-source-dirs:      src
  exposed-modules:     Blockchain.Sequencer
                     , Blockchain.Sequencer.DB.DependentBlockDB
                     , Blockchain.Sequencer.DB.SeenTransactionDB
                     , Blockchain.Sequencer.Monad
                     , Blockchain.Sequencer.Event
                     , Blockchain.Sequencer.Kafka
                     , Blockchain.Sequencer.Constants
                     , Blockchain.Sequencer.BinaryInstances
  other-modules:       Blockchain.Sequencer.Metrics
  build-depends:       base >=4.8 && <4.10
                     , strato-model
                     , blockapps-data
                     , blockapps-util
                     , strato-conf
                     , containers
                     , directory
                     , mtl
                     , transformers-lift
                     , resourcet
                     , monad-logger
                     , text
                     , strato-conf
                     , leveldb-haskell
                     , blockapps-milena
                     , lens
                     , binary
                     , bytestring
                     , ethereum-rlp
                     , time
                     , statsdi

  default-language:    Haskell2010

executable strato-sequencer
  hs-source-dirs:      exec-src
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded
  build-depends:       base >=4.8 && <4.10
                     , strato-sequencer
                     , blockapps-data
                     , blockapps-util
                     , hflags
                     , monad-logger
                     , containers
                     , blockapps-milena
                     , bytestring
                     , strato-conf
  default-language:    Haskell2010
  other-modules: Flags

test-suite strato-sequencer-spec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    ghc-options:      -Wall -O2 -threaded
    main-is:          Spec.hs
    build-depends:    base >=4.8 && <4.10
                    , strato-sequencer
                    , strato-conf
                    , blockapps-util
                    , hflags
                    , monad-logger
                    , mtl
                    , containers
                    , blockapps-milena
                    , bytestring
                    , binary
                    , hspec
                    , hspec-contrib
                    , HUnit
                    , QuickCheck
                    , derive
                    , blockapps-data
                    , bytestring-arbitrary
                    , time
                    , directory
                    , merkle-patricia-db
                    , ethereum-rlp
                    , blockapps-haskoin
                    , random
                    , blockapps-data
    default-language: Haskell2010
    other-modules:  Blockchain.Sequencer.ArbitraryInstances 
                  , Blockchain.Sequencer.ChainHelpers
                  , Blockchain.Sequencer.EventSpec
                  , Blockchain.Sequencer.SequencerSpec
                  , Blockchain.Sequencer.OrderValidator



