name:                strato-statediff
version:             0.1.0.0
author:              BlockApps
maintainer:          blockapps
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  exposed-modules:      Blockchain.Strato.StateDiff
                      , Blockchain.Strato.StateDiff.Database
  build-depends:        base
                      , bytestring
                      , nibblestring
                      , containers
                      , resourcet
                      , aeson
                      , strato-model
                      , blockapps-data
                      , blockapps-util
                      , ethereum-rlp
                      , merkle-patricia-db
                      , persistent
                      , persistent-postgresql
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , GADTs
                      , LambdaCase
                      , RecordWildCards
                      , FunctionalDependencies
  ghc-options:        -Wall -Werror -fno-warn-warnings-deprecations
