name:                strato-statediff
version:             0.1.0.0
author:              BlockApps
maintainer:          blockapps
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  exposed-modules:      Blockchain.Strato.StateDiff
                      , Blockchain.Strato.StateDiff.Database
                      , Blockchain.Strato.StateDiff.Event
                      , Blockchain.Strato.StateDiff.Kafka
  build-depends:        base
                      , binary
                      , bytestring
                      , nibblestring
                      , text
                      , containers
                      , unordered-containers
                      , resourcet
                      , aeson
                      , strato-model
                      , strato-conf
                      , blockapps-data
                      , blockapps-util
                      , ethereum-rlp
                      , merkle-patricia-db
                      , persistent
                      , persistent-postgresql
                      , blockapps-milena
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , GADTs
                      , LambdaCase
                      , RecordWildCards
                      , FunctionalDependencies
                      , DataKinds
                      , DeriveGeneric
                      , ExplicitForAll
                      , NamedFieldPuns
                      , OverloadedStrings
                      , TypeFamilies
                      , ViewPatterns
  ghc-options:        -Wall -Werror -fno-warn-warnings-deprecations -fno-warn-orphans -fno-warn-unused-imports
