name:                test-suite
version:             0.1.0.0
author:              jamshid
maintainer:          jamshid
build-type:          Simple
cabal-version:       >=1.10

executable test-suite-exe
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , binary
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , containers
                     , cryptohash
                     , directory
                     , either
                     , ethereum-rlp
                     , ethereum-vm
                     , filepath
                     , blockapps-haskoin
                     , hflags
                     , IfElse
                     , leveldb-haskell
                     , merkle-patricia-db
                     , mtl
                     , nibblestring
                     , resourcet
                     , scientific
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , ansi-wl-pprint
                     , monad-logger
                     , strato-sequencer
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       TestFiles
                     , TestDescriptions
                     , TestEthereum

Test-suite vm-tests
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options: -Wall -Werror -threaded
    main-is: TestMain.hs
    other-modules:
        Blockchain.Database.MerklePatricia.MerklePatriciaSpec
        Blockchain.Event.EventSpec
        Blockchain.Strato.Discovery.Data.PeerSpec
        Blockchain.Strato.Discovery.UDPSpec
        Blockchain.Strato.Model.BlockchainClassSpec
        Blockchain.Strato.Model.TransactionModel
        Blockchain.Strato.Model.BlockHeaderModel
        Blockchain.Strato.Model.BlockchainModel
        Blockchain.Strato.Model.BlockModel
        Blockchain.Strato.Model.Constants
        Blockchain.Strato.RedisBlockDB.RedisBlockDBSpec
        Blockchain.Strato.RedisBlockDB.Chain
        Blockchain.Sequencer.ArbitraryInstances
        Blockchain.Sequencer.ChainHelpers
        Blockchain.Sequencer.EventSpec
        Blockchain.Sequencer.SequencerSpec
        Blockchain.Sequencer.OrderValidator
    build-depends: base
                 , aeson
                 , ansi-wl-pprint
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-haskoin
                 , blockapps-milena
                 , blockapps-util
                 , bytestring
                 , conduit
                 , containers
                 , crypto-pubkey-types
                 , cryptohash
                 , deepseq
                 , derive
                 , directory
                 , either
                 , ethereum-discovery
                 , ethereum-encryption
                 , ethereum-rlp
                 , ethereum-vm
                 , fast-ecrecover
                 , hedis
                 , hflags
                 , hspec
                 , hspec-contrib
                 , HUnit
                 , lens-family
                 , lens-family-th
                 , leveldb-haskell
                 , merkle-patricia-db
                 , monad-logger
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , strato-conf
                 , strato-model
                 , strato-p2p-client
                 , strato-redis-blockdb
                 , strato-sequencer
                 , text
                 , time
                 , transformers
                 , unordered-containers
                 , QuickCheck



Test-suite test-suite 
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options: -Wall -Werror -threaded
    main-is: Spec.hs
    other-modules:
        Blockchain.Database.MerklePatricia.MerklePatriciaSpec
        Blockchain.Event.EventSpec
        Blockchain.Strato.Discovery.Data.PeerSpec
        Blockchain.Strato.Discovery.UDPSpec
        Blockchain.Strato.Model.BlockchainClassSpec
        Blockchain.Strato.Model.TransactionModel
        Blockchain.Strato.Model.BlockHeaderModel
        Blockchain.Strato.Model.BlockchainModel
        Blockchain.Strato.Model.BlockModel
        Blockchain.Strato.Model.Constants
        Blockchain.Strato.RedisBlockDB.RedisBlockDBSpec
        Blockchain.Strato.RedisBlockDB.Chain
        Blockchain.Sequencer.ArbitraryInstances
        Blockchain.Sequencer.ChainHelpers
        Blockchain.Sequencer.EventSpec
        Blockchain.Sequencer.SequencerSpec
        Blockchain.Sequencer.OrderValidator
    build-depends: base
                 , aeson
                 , ansi-wl-pprint
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-haskoin
                 , blockapps-milena
                 , blockapps-util
                 , bytestring
                 , conduit
                 , containers
                 , crypto-pubkey-types
                 , cryptohash
                 , deepseq
                 , derive
                 , directory
                 , either
                 , ethereum-discovery
                 , ethereum-encryption
                 , ethereum-rlp
                 , ethereum-vm
                 , fast-ecrecover
                 , hedis
                 , hflags
                 , hspec
                 , hspec-contrib
                 , HUnit
                 , lens-family
                 , lens-family-th
                 , leveldb-haskell
                 , merkle-patricia-db
                 , monad-logger
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , strato-conf
                 , strato-model
                 , strato-p2p-client
                 , strato-redis-blockdb
                 , strato-sequencer
                 , text
                 , time
                 , transformers
                 , unordered-containers
                 , QuickCheck

-- Test-Suite test-suite
--   default-language: Haskell98
--   type:             exitcode-stdio-1.0
--   main-is:          TestMain.hs
--   hs-source-dirs:   test, src
--   build-depends:    base >=4 && < 5
--                   , data-default
--                   , leveldb-haskell
--                   , resourcet
--                   , bytestring
--                   , base16-bytestring
--                   , transformers
--                   , binary
--                   , mtl
--                   , containers
--                   , HUnit
--                   , test-framework
--                   , test-framework-hunit
--                   , ethereum-vm
--                   , strato-sequencer
--                   , nibblestring
--                   , blockapps-data
--                   , blockapps-util
--                   , ethereum-rlp
--                   , ansi-wl-pprint
--                   , merkle-patricia-db
--                   , directory
--                   , aeson
--                   , base16-bytestring
--                   , binary
--                   , blockapps-data
--                   , blockapps-util
--                   , bytestring
--                   , containers
--                   , cryptohash
--                   , directory
--                   , either
--                   , ethereum-rlp
--                   , ethereum-vm
--                   , filepath
--                   , hflags
--                   , mtl
--                   , nibblestring
--                   , resourcet
--                   , scientific
--                   , text
--                   , time
--                   , transformers
--                   , unordered-containers
--                   , monad-logger
--                   , blockapps-haskoin
--   other-modules:  TestDescriptions
--                 , TestEthereum
--                 , TestFiles

