name:                test-suite
version:             0.1.0.0
author:              jamshid
maintainer:          jamshid
build-type:          Simple
cabal-version:       >=1.10

Test-suite vm-tests
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options: -Wall -Werror -threaded
    main-is: TestMain.hs
    other-modules:
        Blockchain.Event.EventSpec
        Blockchain.Strato.Model.BlockchainClassSpec
        Blockchain.Strato.Model.TransactionModel
        Blockchain.Strato.Model.BlockHeaderModel
        Blockchain.Strato.Model.BlockchainModel
        Blockchain.Strato.Model.BlockModel
        Blockchain.Strato.Model.Constants
        Blockchain.Strato.RedisBlockDB.RedisBlockDBSpec
        Blockchain.Strato.RedisBlockDB.Chain
        Blockchain.Sequencer.ArbitraryInstances
        Blockchain.Sequencer.ChainHelpers
        Blockchain.Sequencer.EventSpec
        Blockchain.Sequencer.SequencerSpec
        Blockchain.Sequencer.OrderValidator
    build-depends: base
                 , aeson
                 , ansi-wl-pprint
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-haskoin
                 , blockapps-milena
                 , blockapps-util
                 , bytestring
                 , conduit
                 , containers
                 , crypto-pubkey-types
                 , cryptohash
                 , deepseq
                 , derive
                 , directory
                 , either
                 , ethereum-discovery
                 , ethereum-encryption
                 , ethereum-rlp
                 , ethereum-vm
                 , fast-ecrecover
                 , hedis
                 , hflags
                 , hspec
                 , hspec-contrib
                 , HUnit
                 , lens-family
                 , lens-family-th
                 , leveldb-haskell
                 , merkle-patricia-db
                 , monad-logger
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , strato-conf
                 , strato-model
                 , strato-p2p-client
                 , strato-redis-blockdb
                 , strato-sequencer
                 , text
                 , time
                 , transformers
                 , unordered-containers
                 , QuickCheck

Test-suite test-suite 
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    ghc-options: -Wall -Werror -threaded
    main-is: Spec.hs
    other-modules:
        Blockchain.Strato.RedisBlockDB.RedisBlockDBSpec
        Blockchain.Strato.RedisBlockDB.Chain
        Blockchain.Sequencer.ArbitraryInstances
        Blockchain.Sequencer.ChainHelpers
        Blockchain.Sequencer.EventSpec
        Blockchain.Sequencer.SequencerSpec
        Blockchain.Sequencer.OrderValidator
    build-depends: base
                 , aeson
                 , ansi-wl-pprint
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-haskoin
                 , blockapps-milena
                 , blockapps-util
                 , bytestring
                 , conduit
                 , containers
                 , crypto-pubkey-types
                 , cryptohash
                 , deepseq
                 , derive
                 , directory
                 , either
                 , ethereum-discovery
                 , ethereum-encryption
                 , ethereum-rlp
                 , ethereum-vm
                 , fast-ecrecover
                 , hedis
                 , hflags
                 , hspec
                 , hspec-contrib
                 , HUnit
                 , lens-family
                 , lens-family-th
                 , leveldb-haskell
                 , merkle-patricia-db
                 , monad-logger
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , strato-conf
                 , strato-model
                 , strato-p2p-client
                 , strato-redis-blockdb
                 , strato-sequencer
                 , text
                 , time
                 , transformers
                 , unordered-containers
                 , QuickCheck
